<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_all_apps"
    tools:context=".Activity.ActivityEditPassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ImageView
            android:layout_width="@dimen/_140sdp"
            android:layout_height="@dimen/_65sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_30sdp"


            app:srcCompat="@drawable/ic_guess_and_shoot"></ImageView>ew>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_48sdp"
            android:text="@string/edit_password"
            android:textColor="@color/white"
            android:textSize="@dimen/_25sdp"
            android:textStyle="bold"></TextView>

        <TextView
            android:layout_width="@dimen/_200sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/please_insert_your_new_password"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp"></TextView>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:backgroundTint="@color/white"
            android:drawablePadding="@dimen/_10sdp"
            android:drawableLeft="@drawable/ic_lock"
            android:hint="@string/password"
            android:padding="@dimen/_10sdp"
            android:paddingLeft="@dimen/_10sdp"
            android:textColor="@color/white"

            android:textColorHint="@color/white"
            android:textSize="@dimen/_10ssp"></EditText>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:backgroundTint="@color/white"
            android:drawablePadding="@dimen/_10sdp"
            android:drawableLeft="@drawable/ic_lock"
            android:hint="@string/confirm_password"
            android:padding="@dimen/_10sdp"
            android:paddingLeft="@dimen/_10sdp"
            android:textColor="@color/white"

            android:textColorHint="@color/white"
            android:textSize="@dimen/_10ssp"></EditText>

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/_70sdp"
            android:layout_marginTop="@dimen/_130sdp"
            android:background="@drawable/shape_btn"
            android:gravity="center"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_15ssp"></Button>
    </LinearLayout>
</ScrollView>