<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    android:background="@drawable/back_all_apps"
    tools:context=".Activity.forget_password_1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/arrow_back"
            android:background="?attr/selectableItemBackgroundBorderless"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20sdp"
            android:padding="@dimen/_5sdp"
            app:srcCompat="@drawable/ic_right_arrow_1"
            tools:ignore="VectorDrawableCompat"></ImageView>


        <ImageView
            android:layout_width="@dimen/_140sdp"
            android:layout_height="@dimen/_65sdp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_guess_and_shoot"
            tools:ignore="VectorDrawableCompat"></ImageView>ew>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_48sdp"
            android:text="@string/forget_password"
            android:textColor="@color/white"
            android:textSize="@dimen/_25sdp"
            android:textStyle="bold"></TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/please_insert_email_address"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp"></TextView>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:backgroundTint="@color/white"
            android:drawableLeft="@drawable/ic_envelope"
            android:drawablePadding="@dimen/_10sdp"
            android:hint="@string/email_address"

            android:padding="@dimen/_10sdp"
            android:paddingLeft="@dimen/_10sdp"
            android:textColor="@color/white"

            android:textColorHint="@color/white"
            android:textSize="@dimen/_10ssp"></EditText>


        <Button
                android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/_70sdp"
            android:layout_marginTop="@dimen/_90sdp"
            android:background="@drawable/shape_btn"
            android:gravity="center"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_15ssp"></Button>
    </LinearLayout>
</ScrollView>