<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_b"

    tools:context=".SuccessfulContactUs">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">


        <ImageView
            android:layout_width="@dimen/_140sdp"
            android:layout_height="@dimen/_65sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_guess_and_shoot" />



        <ImageView
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_50sdp"
            app:srcCompat="@drawable/ic_check_1"
            tools:ignore="VectorDrawableCompat"></ImageView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_margin="@dimen/_17sdp"
            android:textStyle="bold"

            android:text="@string/Thankyou"
            android:textSize="@dimen/_15sdp">

        </TextView>

        <TextView
            android:layout_width="@dimen/_200sdp"
            android:layout_height="109dp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/The_Fastest_Available"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold"></TextView>


        <Button
            android:id="@+id/get_started"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/_70sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_40sdp"
            android:background="@drawable/shape_btn"
            android:gravity="center"
            android:text="@string/get_started"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_15ssp"></Button>
    </LinearLayout>
</LinearLayout>